# GeoTagIt

./: .gitignore  App.tsx  CHANGELOG.md  README.md  index.html  metadata.json  output.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
.claude/: settings.local.json
components/: GeotaggerPanel.tsx  Header.tsx  Icons.tsx  MapTagger.tsx  PhotoListItem.tsx  PhotoUploader.tsx  SettingsModal.tsx  StatusBar.tsx  WorldView.tsx
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  main.rs.txt
utils/: exifWriter.ts
